@@ -1,3 +1,8 @@
+Fri Oct 15 10:18:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_3911_Regression_Test.cpp:
+          Fixed warning
+
 Thu Oct 14 18:29:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/run_test.lst:
